--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Test</title>
 </head>
 <body>
-    
+    <h1>Заказы</h1>
+
+    <p>На этой странице выводятся заказы, оплаченные зв год:</p>
+
+    <ul>
+        <li>Apple Pencil</li>
+        <li>Macbook Pro</li>
+        <li>iPad Mini</li>
+    </ul>
+
+    <hr>
+
+    <p>Ознакомьтесь с условиями:</p>
+
+    <ol>
+        <li><a href="">Как оформить закз</a></li>
+        <li><a href="">Способы доставки</a></li>
+        <li><a href="">Оплата и доставка</a></li>
+    </ol>
+
+    <p>И помните, что Многие люди терпят неудачу, только потому, что сдаются в двух шагах от успеха</p>
+
 </body>
 </html>
