--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="">Оплата и доставка</a></li>
     </ol>
 
-    <p>И помните, что Многие люди терпят неудачу, только потому, что сдаются в двух шагах от успеха</p>
+    <p>И помните, что &#10077;Многие люди терпят неудачу, только потому, что сдаются в двух шагах от успеха&#10078;</p>
 
 </body>
 </html>
