--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="ico" href="favicon.svg" type="images/svg+xml">
+    <link rel="stylesheet" href="styles/test.css">
     <title>Test</title>
 </head>
 <body>
